Bug 342827 - Discogs Audio search doesn't work
Summary: Discogs Audio search doesn't work
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mint (Ubuntu based) Linux
: NOR major
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-14 09:50 UTC by pietjepukje
Modified: 2015-01-24 03:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pietjepukje 2015-01-14 09:50:38 UTC
Only the Discogs serach is not working. pitty as this is probably the best site for information

Reproducible: Always

Steps to Reproduce:
1.new internet serach
2.title of the album
3.select dsicogs
4. push search button

Actual Results:  
Gave the message no results

Expected Results:  
give a list like on muscbrainz serach
Comment 1 Robby Stephenson 2015-01-24 03:21:55 UTC
Git commit 80a58bbada89f1001d5d31b18d7876b86d976a44 by Robby Stephenson.
Committed on 24/01/2015 at 03:19.
Pushed by rstephenson into branch '2.3'.

Update the Discogs data source to use the JSON API

Users are now required to register for a personal token in order to use
the Discogs API search.

Images still don't work since they require full OAauth support.
Using the personal token is expected to be implemented by Discogs
shortly, but for now, no images.
FIXED-IN: 2.3.10

M  +1    -0    .gitignore
M  +330  -88   src/fetch/discogsfetcher.cpp
M  +31   -10   src/fetch/discogsfetcher.h
M  +1    -1    src/fetch/fetcherinitializer.cpp
M  +0    -1    src/fetch/fetchmanager.cpp
M  +70   -8    src/tests/discogsfetchertest.cpp
M  +7    -0    src/tests/discogsfetchertest.h
M  +0    -1    xslt/CMakeLists.txt
D  +0    -211  xslt/discogs2tellico.xsl

http://commits.kde.org/tellico/80a58bbada89f1001d5d31b18d7876b86d976a44