Update the Discogs data source to use the JSON API

Users are now required to register for a personal token in order to use
the Discogs API search.

Images still don't work since they require full OAauth support.
Using the personal token is expected to be implemented by Discogs
shortly, but for now, no images.

BUG: 342827
FIXED-IN: 2.3.10